[project]
name = "user-workflow-139cbb91-54ae-4884-bea3-95dbd88afac0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click~=7.0",
    "dotenv>=0.9.9",
    "pyzotero~=1.4.4",
    "requests~=2.32.0",
    "xmltodict~=0.12.0",
]
